# OrgBrowser

./: index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/browser/: mod.rs  screenshot_store.rs  window_chrome.rs  windows.rs
src-tauri/src/browser/scripts/: inspector.rs
src/components/: BrowserBar.vue  ConsolePanel.vue  CookiePanel.vue  InspectorPanel.vue  NetworkPanel.vue  TabBar.vue
src/composables/: useBrowserSession.ts  useBrowserTabs.ts
src/styles/: main.css
